--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio Template for Bootstrap</title>
+    <title>Urban Systems and Networks - Netsci 2014</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -30,7 +30,7 @@
             </li>
             <li><a href="#about">About</a>
             </li>
-            <li><a href="#services">Services</a>
+            <li><a href="#speakers">speakers</a>
             </li>
             <li><a href="#portfolio">Portfolio</a>
             </li>
@@ -43,10 +43,13 @@
     <!-- Full Page Image Header Area -->
     <div id="top" class="header">
         <div class="vert-text">
-            <h1>Start Bootstrap</h1>
+            <h1>Urban Systems and Networks</h1>
             <h3>
-                <em>We</em> Build Great Templates,
-                <em>You</em> Make Them Better</h3>
+                Let's build great cities!
+            </h3> 
+<h3>
+                NetSci Satellite - June 2014 -Berkley, CA 
+            </h3> 
             <a href="#about" class="btn btn-default btn-lg">Find Out More</a>
         </div>
     </div>
@@ -57,56 +60,61 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <h2>Subtle Sidebar is the Perfect Template for your Next Portfolio Website Project!</h2>
-                    <p class="lead">This template really has it all. It's up to you to customize it to your liking! It features some fresh photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                    <h2>Urban system and networks </h2>
+                    <p class="lead">Topic description blah blah blah</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lacus justo, pharetra vel sem at, tristique commodo lacus. Phasellus accumsan commodo justo et aliquam. Vivamus tempor sed urna sit amet tempor. Duis quis ultricies ligula, et porta orci. Donec sed pretium lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec interdum elit id urna interdum cursus. Nullam pretium fringilla nisl, vel gravida sem eleifend et .
+
+                    <p> Vivamus eget lorem purus. Maecenas felis neque, fringilla a mi blandit, porttitor mollis justo. Praesent sodales a lacus nec laoreet. Fusce lacinia euismod lacus, a pulvinar tellus iaculis mollis. Donec et orci commodo, accumsan est quis, faucibus nisl. Praesent viverra et purus ac tempus. Cras ac erat arcu. Donec ac purus lacinia, accumsan magna ut, congue libero. Ut lacinia nec risus ac ornare. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+
                 </div>
             </div>
         </div>
     </div>
     <!-- /Intro -->
 
-    <!-- Services -->
-    <div id="services" class="services">
+    <!-- speakers -->
+    <div id="speakers" class="speakers">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
-                    <h2>Our Services</h2>
+                    <h2>Invited speakers</h2>
                     <hr>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-2 col-md-offset-2 text-center">
                     <div class="service-item">
-                        <i class="service-icon fa fa-rocket"></i>
-                        <h4>Spacecraft Repair</h4>
-                        <p>Did your navigation system shut down in the middle of that asteroid field? We can repair any dings and scrapes to your spacecraft!</p>
+                        <img src="img/round_profile.png"/> 
+                        <h4>Jane Doe</h4>
+                        <p>University of Somewhere</p>
                     </div>
                 </div>
-                <div class="col-md-2 text-center">
+                <div class="col-md-2  text-center">
                     <div class="service-item">
-                        <i class="service-icon fa fa-magnet"></i>
-                        <h4>Problem Solving</h4>
-                        <p>Need to know how magnets work? Our problem solving solutions team can help you identify problems and conduct exploratory research.</p>
+                        <img src="img/round_profile.png"/> 
+                        <h4>Jane Doe</h4>
+                        <p>University of Somewhere</p>
                     </div>
                 </div>
-                <div class="col-md-2 text-center">
+                <div class="col-md-2  text-center">
                     <div class="service-item">
-                        <i class="service-icon fa fa-shield"></i>
-                        <h4>Blacksmithing</h4>
-                        <p>Planning a time travel trip to the middle ages? Preserve the space time continuum by blending in with period accurate armor and weapons.</p>
+                        <img src="img/round_profile.png"/> 
+                        <h4>Jane Doe</h4>
+                        <p>University of Somewhere</p>
                     </div>
                 </div>
-                <div class="col-md-2 text-center">
+                <div class="col-md-2  text-center">
                     <div class="service-item">
-                        <i class="service-icon fa fa-pencil"></i>
-                        <h4>Pencil Sharpening</h4>
-                        <p>We've been voted the best pencil sharpening service for 10 consecutive years. If you have a pencil that feels dull, we'll get it sharp!</p>
+                        <img src="img/round_profile.png"/> 
+                        <h4>Jane Doe</h4>
+                        <p>University of Somewhere</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- /Services -->
+    <!-- /speakers -->
 
     <!-- Callout -->
     <div class="callout">
