keynote speakers done

--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
     <div id="about" class="intro">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
+                <div class="col-md-6 col-md-offset-3">
                     <h2>Urban system and networks </h2>
-                    <p class="lead">Topic description blah blah blah</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lacus justo, pharetra vel sem at, tristique commodo lacus. Phasellus accumsan commodo justo et aliquam. Vivamus tempor sed urna sit amet tempor. Duis quis ultricies ligula, et porta orci. Donec sed pretium lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec interdum elit id urna interdum cursus. Nullam pretium fringilla nisl, vel gravida sem eleifend et .
-
-                    <p> Vivamus eget lorem purus. Maecenas felis neque, fringilla a mi blandit, porttitor mollis justo. Praesent sodales a lacus nec laoreet. Fusce lacinia euismod lacus, a pulvinar tellus iaculis mollis. Donec et orci commodo, accumsan est quis, faucibus nisl. Praesent viverra et purus ac tempus. Cras ac erat arcu. Donec ac purus lacinia, accumsan magna ut, congue libero. Ut lacinia nec risus ac ornare. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                    <p>Cities are at their essence social networks embedded in space through infrastructural networks of communication, transportation and services. This view of cities creates interesting opportunities and challenges to Network Science, by providing a context for their function and evolution. </p>
+                    <p>Cities through out the world are growing vertiginously in number and in size. These demographic and socioeconomic trends present important challenges at various levels: they pose a potential threat to the natural environment and generate a long range of urban issues, from congestion to poverty and from increased health risks to crime.</p> 
+                    <p>However, it is precisely at the core of these fascinating complex systems, that we also find new opportunities to tackle such long-standing challenges. In a city, diverse crowds are permanently interacting and at a pace that accelerates with urban scale. This makes cites the natural attractors and producers of technological and social innovations. The latest trends in technology are primarily about objects and people in their daily life equipped with sensors; that can be inventoried and analyzed by computers. 
+                    <p>In this context, Network Science is emerging as the common language that allows us to separate the different scale of analysis and to map and discover intrinsic principles of urban organization. We think this is an effective way to analyze cities in quantitative ways opening new unique opportunities to help manage them via new on-line applications and real time communications. </p>
+                    <p> Current challenges to construct reliable theory and models of cities result from the lack of integrated data sources and comparative studies at different scales that would allow us to integrate the building principles of a science of cities. In this workshop we bring together the latest contributions on analysis of urban systems at different scales: from individual mobility to urban infrastructures, including social networks and spreading dynamics. We will arrange presentations that expose the latest methods of analysis and the most important ubiquitous findings related to urban infrastructures, social interactions and human dynamics. Speakers will be selected to represent the most important findings in a particular scale and layer of interest. Panel discussions will be promoted in order to foster interactions and summarize the current state of the art, future challenges and opportunities. Being a multidisciplinary topic, we will also include participants with the latest advances in understanding cities from computer science and urban planning.</p>
 
 
                 </div>
@@ -80,48 +81,109 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
-                    <h2>Invited speakers</h2>
+                    <h2>Keynote speakers</h2>
                     <hr>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-2 col-md-offset-2 text-center">
                     <div class="service-item">
-                        <img src="img/round_profile.png"/> 
-                        <h4>Jane Doe</h4>
-                        <p>University of Somewhere</p>
+                        <img src="img/mike_round.png"/> 
+                        <h4>Michael Batty</h4>
+                        <p> UCL </p>
                     </div>
                 </div>
                 <div class="col-md-2  text-center">
                     <div class="service-item">
-                        <img src="img/round_profile.png"/> 
-                        <h4>Jane Doe</h4>
-                        <p>University of Somewhere</p>
+                        <img src="img/paul_round.png"/> 
+                        <h4>Paul Waddell</h4>
+                        <p>UC Berkeley</p>
                     </div>
                 </div>
                 <div class="col-md-2  text-center">
                     <div class="service-item">
-                        <img src="img/round_profile.png"/> 
-                        <h4>Jane Doe</h4>
-                        <p>University of Somewhere</p>
+                        <img src="img/kay_round.png"/> 
+                        <h4>Kay Axhausen</h4>
+                        <p>ETH Zurich</p>
                     </div>
                 </div>
                 <div class="col-md-2  text-center">
                     <div class="service-item">
-                        <img src="img/round_profile.png"/> 
-                        <h4>Jane Doe</h4>
-                        <p>University of Somewhere</p>
+                        <img src="img/robert_round.png"/> 
+                        <h4>Robert Sampson</h4>
+                        <p>University of Harvard</p>
                     </div>
+                </div>
+            </div>
+        <div class="row">
+                <div class="col-md-4 col-md-offset-4 text-center">
+                    <h2>Keynote speakers</h2>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-md-offset-2 text-center">
+                    <div class="service-item">
+                        <h4>Alex Arenas</h4>
+                        <p> Universidad Rovira i Virgili </p>
+                        <p> <em> Multi-layer Networks in the Urban Context</em></p>
+                    </div>
+                </div>
+                <div class="col-md-2  text-center">
+                    <div class="service-item">
+                        <h4>David Levinson</h4>
+                        <p>University of Minnesota</p>
+                        <p> <em> Evolution of Transportation networks</em></p>
+                    </div>
+                </div>
+                <div class="col-md-2  text-center">
+                    <div class="service-item">
+                        <h4>Vincenzo Nicosia</h4>
+                        <p>QMU (London)</p>
+                        <p><em> Street Networks </em></p>
+                    </div>
+                </div>
+                <div class="col-md-2  text-center">
+                    <div class="service-item">
+                        <h4>Filippo Simini</h4>
+                        <p> University of Bristol</p>
+                        <p><em>Commuting Models a Continuum Approach</em></p>
+                    </div>
+                </div>
+            </div>
+</div>
+    </div>
+    <!-- /speakers -->
+
+    <!-- Call to Action -->
+    <div class="call-to-action" id="topics">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4 text-center">
+                    <h2> Topics  </h2>
+
+                </div>
+                <div class="col-md-6 col-md-offset-3">
+                    <ul>
+                        <li> Spatial Networks Metrics and Models</li>
+                        <li> Urban Growth and Urban Organization</li>
+                        <li> Urban social networks of communication</li>
+                        <li> Resilience of Networks Flows and Infrastructure Networks</li>
+                        <li> Urban Encounters and Spreading Dynamics</li>
+                        <li> Social Networks and Mobility</li>
+                        <li> Interdependent Infrastructure and Transportation Networks</li>
+                        <li> Models of Commuting and Migration</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!-- /speakers -->
-
+    <!-- /Call to Action -->
+ 
     <!-- Callout -->
     <div class="callout">
         <div class="vert-text">
-            <h1>Deadline April 15th</h1>
+            <h1>Abstract deadline April 6th</h1>
         </div>
     </div>
     <!-- /Callout -->
@@ -153,7 +215,7 @@
 
                 </div>
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <p> Deadline: April 15th </p>
+                    <p> Deadline: April 6th </p>
                     <!--<a href="#" class="btn btn-lg btn-default">Submit an abstract</a>-->
                     <script type="text/javascript" src="http://form.jotform.us/jsform/40754826822156"></script>
                 </div>
