--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
                 <div class="col-md-6 col-md-offset-3">
                     <h2>Urban system and networks </h2>
                     <p>Cities are at their essence social networks embedded in space through infrastructural networks of communication, transportation and services. This view of cities creates interesting opportunities and challenges to Network Science, by providing a context for their function and evolution. </p>
+                    <center> <img class="col-md-12" src="img/fig1.png"></center>
                     <p>Cities through out the world are growing vertiginously in number and in size. These demographic and socioeconomic trends present important challenges at various levels: they pose a potential threat to the natural environment and generate a long range of urban issues, from congestion to poverty and from increased health risks to crime.</p> 
                     <p>However, it is precisely at the core of these fascinating complex systems, that we also find new opportunities to tackle such long-standing challenges. In a city, diverse crowds are permanently interacting and at a pace that accelerates with urban scale. This makes cites the natural attractors and producers of technological and social innovations. The latest trends in technology are primarily about objects and people in their daily life equipped with sensors; that can be inventoried and analyzed by computers. 
                     <p>In this context, Network Science is emerging as the common language that allows us to separate the different scale of analysis and to map and discover intrinsic principles of urban organization. We think this is an effective way to analyze cities in quantitative ways opening new unique opportunities to help manage them via new on-line applications and real time communications. </p>
+
+                    <center> <img class="col-md-12" src="img/fig2.png"></center>
                     <p> Current challenges to construct reliable theory and models of cities result from the lack of integrated data sources and comparative studies at different scales that would allow us to integrate the building principles of a science of cities. In this workshop we bring together the latest contributions on analysis of urban systems at different scales: from individual mobility to urban infrastructures, including social networks and spreading dynamics. We will arrange presentations that expose the latest methods of analysis and the most important ubiquitous findings related to urban infrastructures, social interactions and human dynamics. Speakers will be selected to represent the most important findings in a particular scale and layer of interest. Panel discussions will be promoted in order to foster interactions and summarize the current state of the art, future challenges and opportunities. Being a multidisciplinary topic, we will also include participants with the latest advances in understanding cities from computer science and urban planning.</p>
 
 
@@ -148,6 +151,29 @@
                         <h4>Filippo Simini</h4>
                         <p> University of Bristol</p>
                         <p><em>Commuting Models a Continuum Approach</em></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-md-offset-3 text-center">
+                    <div class="service-item">
+                        <h4> Fu Zheng</h4>
+                        <p> Microsoft Research Asia</p>
+                        <p> <em> Urban Computing</em></p>
+                    </div>
+                </div>
+                <div class="col-md-2  text-center">
+                    <div class="service-item">
+                        <h4>MB Short</h4>
+                        <p>UCLA</p>
+                        <p> <em>Mathematical Models of Burglary</em></p>
+                    </div>
+                </div>
+                <div class="col-md-2  text-center">
+                    <div class="service-item">
+                        <h4>David Aldous </h4>
+                        <p>UC Berkeley</p>
+                        <p><em> Spatial Networks </em></p>
                     </div>
                 </div>
             </div>
