--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <div class="col-md-3 text-center">
                     <div class="service-item">
                         
-                    <h4>Marta González *</h4>
+                    <h4>Marta González </h4>
                     <p><a href="http://humnelat.mit.edu">MIT Humnet Lab</a></p>
                     </div>
                 </div>
