--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="service-item">
                         <div class="picture_round simini"> </div>
                         <h4>Filippo Simini *</h4>
-                        <p> university of bristol</p>
+                        <p> University of Bristol</p>
                         <p><em>Commuting models a continuum approach</em></p>
                     </div>
                 </div>
