--- a/index.html
+++ b/index.html
@@ -67,20 +67,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="service-item">
                         <div class="picture_round koonin"> </div>
                         <h4>Steve Koonin *</h4>
                         <p>New York University</p>
                     </div>
                 </div>
-                <div class="col-md-4  text-center">
-                    <div class="service-item">
-                        <div class="picture_round sandy"> </div>
-                        <h4>Sandy Pentland *</h4>
-                        <p>MIT Media Lab</p>
-                    </div>
-                </div> 
+                   
                 <div class="col-md-4  text-center">
                     <div class="service-item">
                         <img src="img/paul_round.png"/> 
@@ -97,11 +91,18 @@
                 </div>
             </div>
             <div class="row">
+		<div class="col-md-2 col-md-offset-3 text-center">	
+			 <div class="service-item">
+                        <div class="picture_round aldous"> </div>
+                        <h4>David Aldous </h4>
+                        <p> UC Berkeley</p>
+                    </div>
+		   </div>
 
-                <div class="col-md-2 col-md-offset-2 text-center">
+                <div class="col-md-2  text-center">
                     <div class="service-item">
                         <div class="picture_round arenas"> </div>
-                        <h4>Alex Arenas *</h4>
+                        <h4>Alex Arenas </h4>
                         <p> Universidad Rovira i Virgili </p>
                         <p> <em> Multi-layer Networks in the Urban Context</em></p>
                     </div>
@@ -109,36 +110,28 @@
 
                 <div class="col-md-2  text-center">
                     <div class="service-item">
-                        <div class="picture_round motter"> </div>
-                        <h4> Adilson E Motter*</h4>
-                        <p>Northeastern University</p>
-                        <p><em>Control of Complex Networks in Cities </em></p>
+                        <div class="picture_round sybil"> </div>
+                        <h4> Sybil Derrible</h4>
+                        <p>University of Illinois at Chicago</p>
+                        <p><em>Geometric and topological network feature of infrastructure </em></p>
                     </div>
                 </div>
-                <div class="col-md-2  text-center">
-                    <div class="service-item">
-                        <div class="picture_round nicosia"> </div>
-                        <h4>Vincenzo Nicosia *</h4>
-                        <p>QMU (London)</p>
-                        <p><em> Street Networks </em></p>
-                    </div>
-                </div>
+                            </div>
+            <div class="row">
 
-                <div class="col-md-2  text-center">
+                <div class="col-md-2 col-md-offset-3 text-center">
                     <div class="service-item">
                         <div class="picture_round ramasco"> </div>
-                        <h4>JJ Ramasco *</h4>
+                        <h4>JJ Ramasco </h4>
                         <p> Institute for Cross-Disciplinary Physics and
                         Complex Systems</p>
                         <p><em>Spatial structure of cities</em></p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-2  col-md-offset-4 text-center">
+                <div class="col-md-2 text-center">
                     <div class="service-item">
                         <div class="picture_round short"> </div>
-                        <h4>MB Short *</h4>
+                        <h4>MB Short</h4>
                         <p>UCLA</p>
                         <p> <em>Mathematical Models of Burglary</em></p>
                     </div>
@@ -152,7 +145,6 @@
                         <p><em>Commuting models a continuum approach</em></p>
                     </div>
                 </div>
-
             </div>
 		<div class="row"><div class="col-12 text-center"><p>(*) To be confirmed</p></div></div>
 </div>
