--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                         <div class="picture_round aldous"> </div>
                         <h4>David Aldous </h4>
                         <p> UC Berkeley</p>
+			<p><em>  Geometric and topological network feature of infrastructure</em></p>
                     </div>
 		   </div>
 
@@ -113,7 +114,7 @@
                         <div class="picture_round sybil"> </div>
                         <h4> Sybil Derrible</h4>
                         <p>University of Illinois at Chicago</p>
-                        <p><em>Geometric and topological network feature of infrastructure </em></p>
+                        <p><em> Water and Sustainability </em></p>
                     </div>
                 </div>
                             </div>
